--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,31 @@
-.App {
-  text-align: center;
+
+  body {
+    color: #cc5500;
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    background: #FFFFA7;
+    font-family: 'Work Sans', sans-serif;
+    font-weight: 500;
+    text-align: center;
+  }
+
+form {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 100vw;
 }
 
-.loading-bar {
-  display: grid;
-  grid-row-gap: 12px;
+.display {
+  opacity: 1;
 }
-
-progress {
-  border: 1px solid #294910;
-  height: 20px;
-  width: 400px;
-}
-
-progress[value]::-webkit-progress-bar {
-  background: #e8e8e8;
-}
-
-progress[value]::-webkit-progress-value {
-  background: #294910;
+.hide {
+  opacity: 0;
 }
