--- a/src/App.css
+++ b/src/App.css
@@ -17,15 +17,44 @@
 form {
   box-sizing: border-box;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
   width: 100vw;
 }
 
+nav {
+  display: flex;
+  gap: 5%;
+  justify-content: center;
+  justify-items: center;
+  flex-direction: row;
+  margin: 20px;
+  font-size: 18px;
+  text-decoration: none;
+  color: red;
+}
+#cities {
+  border: 1px solid #294910;
+  height: 20px;
+  width: 20%;
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 500;
+  text-align: center;
+
+}
 .display {
   opacity: 1;
 }
 .hide {
   opacity: 0;
+}
+
+.home { 
+  padding-top: 40px;
+}
+
+.homeh2 {
+  padding-top: 20px;
 }
