--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,7 @@
-
+html {
+  scroll-behavior: smooth;
+ }
+  
   body {
     color: #cc5500;
     height: 100vh;
@@ -12,6 +15,8 @@
     font-family: 'Work Sans', sans-serif;
     font-weight: 500;
     text-align: center;
+    overflow: scroll;
+ white-space: nowrap;
   }
 
 form {
@@ -57,4 +62,13 @@ nav {
 
 .homeh2 {
   padding-top: 20px;
+}
+
+.link { 
+  font-size: 20px;
+  text-decoration: none;
+  color: #cc5500;
+}
+.link:hover {
+  background-color: cyan;
 }
