--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ nav {
   gap: 5%;
   justify-content: center;
   justify-items: center;
-  flex-direction: row;
+  flex-direction: column;
   margin: 20px;
   font-size: 18px;
   text-decoration: none;
@@ -58,6 +58,8 @@ nav {
 
 .home { 
   padding-top: 40px;
+  text-align: center;
+  margin: 0 auto;
 }
 
 .homeh2 {
@@ -71,4 +73,8 @@ nav {
 }
 .link:hover {
   background-color: cyan;
+  width: 10vw;
+  text-align: center;
+  margin: 0 auto;
 }
+
