--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ nav {
   gap: 5%;
   justify-content: center;
   justify-items: center;
-  flex-direction: column;
+  flex-direction: row;
   margin: 20px;
   font-size: 18px;
   text-decoration: none;
@@ -73,8 +73,5 @@ nav {
 }
 .link:hover {
   background-color: cyan;
-  width: 10vw;
-  text-align: center;
-  margin: 0 auto;
 }
 
